src/assets/css/app.css
/* ... */
.select_materia select {
    outline: none;
    width: 90%;
    height: 35px;
    font-size: 15px;
    display: block;
    margin: 10px auto;
}

.footer_post {
    display: flex;
    width: 95%;
}

.select_file {
    margin-left: 5%;
}

.image-upload {
    margin-top: 20px;
}

.image-upload i {
    font-size: 26px;
}

.preview_contenedor h3 {
    height: 100%;
    color: black;
    font-size: 18px;
    overflow: hidden;
    text-overflow: ellipsis;
}

.preview_contenedor {
    width: 90%;
    height: 50px;
    margin: auto;
    padding: 10px;
    display: flex;
    background-color: #f4f4f7;
    border-radius: 7px;
    border: 1px solid var(--background);
    margin-top: 6px;
    overflow: hidden;
}

.preview {
    padding: 5px;
}

.file {
    font-size: 30px;
    color: var(--color);
}

.equis {
    margin-left: auto;
}

.boxText_btn {
    background-color: var(--color);
    border: none;
    color: white;
    font-weight: 900;
    border-radius: 7px;
    width: 110px;
    height: 35px;
    margin-top: 20px;
    margin-left: auto;
    cursor: pointer;
}

.btn_jitsi {
    background-color: var(--color);
    border: none;
    color: white;
    font-weight: 900;
    border-radius: 7px;
    width: 70px;
    height: 24px;
    cursor: pointer;
}

.post {
    display: flex;
    align-items: flex-start;
    border-bottom: 1px solid var(--background);
    padding-bottom: 10px;
}

.post_avatar {
    padding: 20px;
}

.post_avatar img {
    height: 60px;
    width: 60px;
    border-radius: 50%;
}

.post_body {
    min-width: 700px;
    padding: 10px;
}

.post_body img {
    width: 165px;
    height: 10vw;
}

.posts_style {
    height: 50px;
    margin: auto;
    padding: 8px;
    display: flex;
    background-color: #f4f4f7;
    border-radius: 7px;
    border: 1px solid var(--background);
    color: black;
    text-decoration: bold;
    margin-top: 8px;
    overflow: hidden;
}

.post_title {
    font-weight: 600;
    font-size: 15px;
    color: rgb(0, 0, 0);
}

.post_body_text {
    margin-bottom: 20px;
    font-size: 15px;
    margin-top: 15px;
}

em {
    color: red;
}

.post_body p {
    font-weight: 1000;
    font-size: 12px;
    color: grey;
}

.post_body span {
    font-size: 18px;
}

.previw_archivosPost {
    height: 60px;
    margin: auto;
    padding: 10px;
    display: flex;
    background-color: #f4f4f7;
    border-radius: 7px;
    border: 1px solid var(--background);
    margin-top: 6px;
    overflow: hidden;
}

.previw_archivosPost h3:hover {
    cursor: pointer;
    text-decoration: underline;
}

.previw_archivosPost h3 {
    white-space: nowrap;
    text-overflow: ellipsis;
    overflow: hidden;
}

.previw_archivosPost span {
    margin-left: 5px;
}

.contenedorImg {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    transition: 1s;
}

.imgPost img {
    object-fit: cover;
    width: 170px;
    height: 150px;
    margin: 3px;
    border-radius: 4px;
    border: 0.5px solid rgb(255, 255, 255);
}

.imgPost img:hover {
    transform: scale(1.1);
    cursor: pointer;
}


/* Event */

.events {
    flex: 0.3;
    height: 100vh;
    position: sticky;
    top: 0;
}

.events_header {
    margin-top: 20px;
    background-color: white;
    margin-left: 20px;
    border: 1px solid var(--background);
    padding: 12.8px 20px;
}

.calendarioElement {
    margin-top: 30px;
    margin-left: 20px;
}

.currentEvent {
    margin-top: 30px;
    background-color: #ffffff;
    border-radius: 7px;
    margin-left: 20px;
}

.currentEvent_contenedor {
    border: 1px solid var(--background);
    border-radius: 7px;
}

.currentEvent_contenedor h3 {
    font-weight: 600;
    padding: 10px;
    font-size: 1rem;
    color: #4f5468;
    text-transform: uppercase;
}

.sidebarDot_event {
    height: 0.5rem;
    width: 0.5rem;
    border-radius: 50%;
    background-color: var(--puntoEvento);
    display: inline-block;
    margin-bottom: 0.125rem;
}

.events_header {
    display: flex;
    font-size: 20px;
    border-radius: 7px;
}

.events_icon {
    margin: auto;
    margin-left:20px;
}

.noticont {
    position: relative;
}

.noticont:hover {
    cursor: pointer;
}

.noticont p:hover {
    color: #50b7f5;
    transition: all 0.2s ease-in-out;
}

.icon_noti p {
    border-bottom: 1px solid var(--colorLetra);
    font-size: 15px;
    text-align: center;
    margin: 0;
    padding-top: 5px;
    padding-bottom: 5px;
}

.icon_noti p:last-child {
    border-bottom: none;
}

.icon_noti {
    display: none;
    color: rgb(0, 0, 0);
    width: 180px;
    z-index: 100;
    background-color: white;
    box-shadow: 0px 0 3px #000000;
    text-decoration: none;
    outline: none;
    position: absolute;
    margin-top: 19px;
    transform: translateX(-50%);
    border-radius: 3px;
}

.fa-bell-slash:hover {
    border-radius: 50%;
    color: var(--color);
}

.coloricono {
    color: #b2b2b2;
}

.sombra:hover {
    text-shadow: 1px 2px 4px #444444;
}

.styleTarea label {
    margin-left: 27px;
}

.styleTarea input,
textarea {
    outline: none;
    width: 90%;
    height: 30px;
    font-size: 15px;
    display: block;
    margin: 10px auto;
    background: transparent;
    border: 0;
    border-bottom: 4px solid var(--background);
}

.styleTarea div {
    margin-top: 10px;
}

.select_tarea {
    outline: none;
    width: 90%;
    display: block;
    margin: 10px auto;
}

.select_tarea select {
    float: right;
    height: 28px;
    font-size: 15px;
}

.footer_tarea {
    display: flex;
    flex-direction: column;
    width: 100%;
}

.boxText_btn_tarea {
    background-color: var(--color);
    border: none;
    color: white;
    font-weight: 900;
    border-radius: 7px;
    width: 100px;
    height: 35px;
    margin-top: 10px;
    margin-left: 348px;
    cursor: pointer;
}

.footer_tarea {
    display: flex;
    flex-direction: row;
}
/* ... */

